Restrukturyzacja index.html

--- a/static/style/extend/footer.css
+++ b/static/style/extend/footer.css
@@ -1,7 +1,7 @@
 /* Stylowanie stopki */
 .alx-foo {
     width: 100%;
-    height: 5%;
+    height: 50px;
     min-height: 30px;
     align-items: center;
     justify-content: center;
