--- a/templates/extend/user_panel.html
+++ b/templates/extend/user_panel.html
@@ -1,3 +1,7 @@
+{# google sign in #}
+<meta name="google-signin-client_id"
+      content="557305630089-3sr6loe91a193q6t9e2du5np98rt0khf.apps.googleusercontent.com">
+<script src="https://apis.google.com/js/platform.js"></script>
 <link rel=stylesheet type=text/css href="/static/style/extend/user_panel.css"/>
 <div id="userinfo">
     <div class="avatar">
