--- a/templates/info_pages/contact.html
+++ b/templates/info_pages/contact.html
@@ -17,7 +17,7 @@
         <br>
         <br>Lub napisz do nas!
 
-        <form action="maill" method="post">
+        <form action="/sendMail" method="post">
             <textarea name="message" placeholder="Napisz wiadomość..."></textarea>
             <br>
             <br><div id="podpis"></div>
