--- a/templates/include/include_trashbox.html
+++ b/templates/include/include_trashbox.html
@@ -31,8 +31,8 @@
         <tbody>
         {#  Wypisanie przekazanych elementów katalogu  #}
         {% for file in files %}
-            <tr>
-                <form action="/mytrashbox" method="post" ondblclick="">
+            <tr ondblclick="openmenu('popmenu', '{{ file.FilePath }}')">
+                <form action="/mytrashbox" method="post">
                     {#  Ikona odpowiadająca typowi pliku  #}
                     <td><i class="icon-{{ file.Icon }}"></i></td>
 
@@ -53,7 +53,6 @@
     {#  PopUp z opcjami dotyczącymi wyświerlonego rekordu z plikiem/katalogiem po najechaniu myszą #}
     <div class="popmenu" id="popmenu" onmouseleave="closemenu('popmenu')">
         <input type="button" class="btn" name="open" value="Otwórz" onclick="openit()">
-        <input type="button" name="close" value="Zamknij" onclick="closemenu('popmenu')">
     </div>
 
     {#  Nowy katalog #}
@@ -95,12 +94,12 @@
         $('#' + tag).css({
             'display': 'flex',
             'top': (event.clientY - 17) + 'px',
-            'left': (event.clientX - 100) + 'px',
+            'left': (event.clientX - 50) + 'px',
             'width': '200px'
         });
         $('#' + tag).animate({
             opacity: 1,
-            left: (event.clientX - 150) + 'px',
+            left: (event.clientX - 100) + 'px',
         }, {duration: 500});
         console.log('pop open');
     }
